--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,16 +111,19 @@ p {
 div {
   font-size: 16px !important;
   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
+
 }
 
 ul li {
   font-size: 16px !important;
   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
+  font-weight: 500 ;
 }
 
 ul li a {
   font-size: 16px !important;
   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
+  font-weight: 500 ;
 }
 
 footer ul li a {
@@ -3830,7 +3833,7 @@ blockquote:before {
   -webkit-transition: all 0.15s linear;
   -moz-transition: all 0.15s linear;
   -o-transition: all 0.15s linear;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .header-nav .nav>li .mega-menu>li ul a:hover,
@@ -9886,6 +9889,9 @@ a,
 }
 .list-hand-point li:before{
   top: 5px;
+}
+.studentJourney .list-hand-point li:before{
+  color: #1a43bf;
 }
 .list-circle li:before{
   top: 20px !important;
@@ -19305,4 +19311,13 @@ input[type="radio"]+label:hover:before {
   .ZingCourseModule h6{
     text-align: left !important;
   }
+}
+
+.home-banner-title{
+  font-size: 50px;
+    font-weight: 800 !important;
+    text-transform: uppercase;
+    color: transparent;
+    -webkit-text-stroke: 2px #fbbf2b;
+    letter-spacing: 2px;
 }
