--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19313,11 +19313,20 @@ input[type="radio"]+label:hover:before {
   }
 }
 
-.home-banner-title{
+/* .home-banner-title{
   font-size: 50px;
     font-weight: 800 !important;
     text-transform: uppercase;
     color: transparent;
     -webkit-text-stroke: 2px #fbbf2b;
+    letter-spacing: 2px;
+} */
+
+.home-banner-title{
+  font-size: 50px;
+    font-weight: 800 !important;
+    text-transform: uppercase;
+    color: transparent;
+    -webkit-text-stroke: 2px #fff;
     letter-spacing: 2px;
 }
