--- a/public/css/homeslider.css
+++ b/public/css/homeslider.css
@@ -16,13 +16,13 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(
+  /* background: -webkit-gradient(
     linear,
     left top,
     left bottom,
     from(transparent),
     to(rgba(0, 0, 0, 0.9))
-  );
+  ); */
   /* background: rgba(0, 0, 0, 0.4); */
   bottom: 0;
   left: 0;
