--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18960,7 +18960,7 @@ input[type="radio"]+label:hover:before {
 }
 
 .HomeService .project-content .btn a {
-  font-size: 15px !important;
+  font-size: 13px !important;
 }
 
 .service-titlebg {
@@ -19209,10 +19209,20 @@ input[type="radio"]+label:hover:before {
     top: 24px;
   }
 }
-
+.footer-img{
+  /* height: fit-content ; */
+ display: flex;
+ flex-direction: column;
+ justify-content: end;
+}
 @media (max-width:500px){
+  .footer-img-content{
+    flex-wrap: wrap;
+  }
   .footer-img{
+    width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: center;
   }
   .footer-img img{
@@ -19323,7 +19333,7 @@ input[type="radio"]+label:hover:before {
 } */
 
 .home-banner-title{
-  font-size: 50px;
+  font-size: 52px;
     font-weight: 800 !important;
     text-transform: uppercase;
     color: transparent;
