--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18222,7 +18222,7 @@ input[type="radio"]+label:hover:before {
 
 @media (max-width:500px) {
   .home-ban {
-    height: 50vh !important;
+    height: 60vh !important;
   }
   .academy-ban{
     height: 50vh !important;
@@ -18232,7 +18232,7 @@ input[type="radio"]+label:hover:before {
 
 @media (max-width:400px) {
   .home-ban {
-    height: 45vh !important;
+    height: 50vh !important;
   }
   .academy-ban{
     height: 45vh !important;
@@ -19267,7 +19267,18 @@ input[type="radio"]+label:hover:before {
   h3{
     font-size: 25px;
   }
- 
+  .home-ban h1 span{
+    font-size: 35px !important;
+  }
+
+  .home-ban h1 b{
+    font-size: 30px !important;
+  }
+  .home-ban .slider-content .inner.sliderStyle7 .site-button{
+    margin-top: 10px !important;
+    padding: 12px 25px !important;
+    font-size: 13px;
+  }
 }
 
 
