--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -36,6 +36,41 @@
   transition: 0.3s;
 }
 
+
+@media only screen and (max-width: 768px){
+  .home-bnr1 h1{
+    font-weight: 600 !important;
+    font-size: 35px;
+    color: white;
+    margin-bottom: 10px;
+  }
+  .home-bnr1 h1 span{
+    font-size: 42px;
+  }
+  .home-bnr1 h1 b{
+    font-size: 37px !important;
+  }
+  .home-bnr1 p{
+    color: white;
+    width: 80%;
+   margin: auto;
+  }
+  .home-bnr1  a {
+    background: #fff !important;
+    color: #000 !important;
+    border-color: #fff !important;
+  }
+}
+
+
+
+@media only screen and (max-width: 591px) {
+.home-bnr1 h1{
+font-size: 30px;
+line-height: 40px;
+}
+}
+
 .home-bnr1 .buttons a:hover {
   background-color: #fff;
   color: black;
