--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18225,23 +18225,34 @@ input[type="radio"]+label:hover:before {
 }
 
 @media (max-width:500px) {
-  .home-ban {
+  /* .home-ban {
     height: 60vh !important;
-  }
-  .academy-ban{
+  } */
+  
+  /* .academy-ban{
     height: 50vh !important;
     object-position: right;
-  }
+  } */
+
+
+}
+
+@media (max-width:768px){
+  .academy-ban a{
+    padding: 8px 10px;
+    font-size: 14px;
+    font-weight: 500;
+    }
 }
 
 @media (max-width:400px) {
-  .home-ban {
+  /* .home-ban {
     height: 50vh !important;
   }
   .academy-ban{
     height: 45vh !important;
     object-position: right;
-  }
+  } */
   .academy-ban img{ 
  
     object-position: left !important;
@@ -19318,6 +19329,11 @@ input[type="radio"]+label:hover:before {
     font-size: 30px !important;
   }
   .home-ban .slider-content .inner.sliderStyle7 .site-button{
+    margin-top: 10px !important;
+    padding: 12px 25px !important;
+    font-size: 13px;
+  }
+  .home-ban .site-button{
     margin-top: 10px !important;
     padding: 12px 25px !important;
     font-size: 13px;
