--- a/public/plugins/revolution/old/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css
+++ b/public/plugins/revolution/old/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css
@@ -283,7 +283,7 @@
 	content: "\e61a";
 }
 .pe-7s-repeat:before {
-	content: "\e61b";
+	content: "\f099";
 }
 .pe-7s-refresh:before {
 	content: "\e61c";
