--- a/public/css/event.css
+++ b/public/css/event.css
@@ -331,7 +331,8 @@
   left: 50%;
   top: 60%;
   transform: translate(-50%, -57%);
-  background-image: url(../images/about/event/circle.png);
+  /* background-image: url(../images/about/event/circle.png); */
+  background-image: url(../images/Zingfluence/circle.png);
   background-size: cover;
   z-index: -1;
 }
