--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19686,7 +19686,7 @@ input[type="radio"]+label:hover:before {
 
 
 .newsletter-box {
-  background-color: #e21100;
+  background-color: #d23530;
   /* border-radius: 15px; */
   /* padding: 40px; */
   max-width: 100%;
