--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -36,8 +36,39 @@
   transition: 0.3s;
 }
 
+@media (max-width: 990px){
+  .hero-content  {
+    margin-top: 50px;
+  }
+  .home-bnr1 h1{
+    font-weight: 600 !important;
+    font-size: 45px;
+    color: white;
+    margin-bottom: 10px;
+  }
 
-@media only screen and (max-width: 990px){
+  /* .home-bnr1 h1 span{
+    font-size: 48px;
+  } */
+
+  .home-bnr1 .char-img{
+    width: 80% !important;
+    margin-top: 50px;
+  }
+  .home-bnr1 p{
+    color: white;
+    width: 80%;
+   margin: auto;
+  }
+  .home-bnr1  a {
+    background: #fff !important;
+    color: #000 !important;
+    border-color: #fff !important;
+  }
+}
+
+
+@media only screen and (max-width: 768px){
   .home-bnr1 h1{
     font-weight: 600 !important;
     font-size: 35px;
@@ -60,8 +91,13 @@
     color: #000 !important;
     border-color: #fff !important;
   }
+ 
+}
+
+@media (max-width:768px){
   .home-bnr1 .char-img{
     width: 50% !important;
+    margin-top: 0px;
   }
 }
 
@@ -275,10 +311,10 @@ line-height: 40px;
     margin-bottom: 30px;
   }
 
-  .home-bnr1 img {
+  /* .home-bnr1 img {
     width: 80%;
     max-width: 80%;
-  }
+  } */
 
   .has-mega-menu.homedemo .mega-menu {
     height: auto;
