--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -69,6 +69,9 @@
 
 
 @media only screen and (max-width: 768px){
+  .hero-content  {
+    margin-top: 0px;
+  }
   .home-bnr1 h1{
     font-weight: 600 !important;
     font-size: 35px;
