--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3771,9 +3771,11 @@ blockquote:before {
   -o-transition: all 0.8s;
 }
 
+
 .header-nav .nav>li:hover>a {
   color: var(--color-primary);
 }
+
 
 .header-nav .nav>li:hover>a:after {
   width: 100%;
@@ -3824,6 +3826,13 @@ blockquote:before {
   width: 350px;
   /* left: -100px; */
 }
+@media (max-width:1200px){
+  .header-nav .nav>li .sub-menu.academy-dd {
+    width: auto;
+    /* left: -100px; */
+  }
+}
+
 
 .header-nav .nav>li .sub-menu li {
   border-bottom: 0px solid #f4f4f4;
