--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9932,6 +9932,11 @@ a,
   fill:#000
 }
 
+.privacyPloicy .list-circle li:before{
+  top: 6px !important;
+  fill:#000
+}
+
 ul[class*="list-"] {
   font-size: 15px;
 }
