--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -681,6 +681,12 @@ line-height: 40px;
   margin-bottom: 10px;
 }
 
+@media (max-width:1400px){
+  .slider-content .inner.sliderStyle7 .subTitle1{
+    font-size: 20px !important;
+  }
+}
+
 .slider-content .inner.sliderStyle7 h1 {
   /* letter-spacing: 1px; */
   font-size: 45px;
