--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20349,7 +20349,7 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
   padding: 20px 0 !important;
 }
 .ourusp marquee span {
-  font-size: 50px !important;
+  font-size: 40px !important;
   font-weight: 300 !important;
   letter-spacing:5px;
  
@@ -20386,6 +20386,7 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 .iteach-img{
   /* border: 1px solid red; */
   height: 100%;
+  width: 100%;
 }
 
 .iteach-img img{
@@ -20424,7 +20425,7 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 .special-programs {
   /* background-color: #f1f5ff; */
   background-color: #a1afd9;
-  padding: 4rem 2rem;
+  padding: 30px 2rem;
 }
 
 .special-programs__container {
@@ -20505,7 +20506,7 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 }
 
 .special-programs__image img {
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
 }
 
@@ -20516,12 +20517,17 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 } */
 
 
+
 .support-women {
   position: relative;
   background-color: #e2110026;
-  padding:100px 1rem;
+  padding: 100px 1rem;
   text-align: center;
   border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
   /* overflow: hidden; */
 }
 
@@ -20531,14 +20537,6 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
   z-index: 2;
   position: relative;
 }
-
-/* .support-women__content h2 {
-  font-size: 3rem;
-  font-style: italic;
-  font-family: 'Georgia', serif;
-  margin-bottom: 1rem;
-  color: #000;
-} */
 
 .support-women__content p {
   font-size: 1.25rem;
@@ -20565,9 +20563,8 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 
 .mascot {
   position: absolute;
-  bottom: 0;
-  /* width: 120px; */
   height: auto;
+  z-index: 1;
 }
 
 .mascot.left {
@@ -20580,6 +20577,72 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 .mascot.right {
   right: 100px;
   width: 200px;
-  bottom: 50px;
+  bottom: 130px;
   transform: translateY(20%);
+}
+
+/* Responsive Tweaks */
+
+@media (max-width: 1300px) {
+  .mascot.left {
+    width: 220px;
+    left: 30px;
+    top: -80px;
+  }
+
+  .mascot.right {
+    width: 180px;
+    right: 50px;
+    bottom: 80px;
+  }
+}
+
+
+@media (max-width: 1024px) {
+  .mascot.left {
+    width: 180px;
+    left: 20px;
+    top: -30px;
+  }
+
+  .mascot.right {
+    width: 160px;
+    right: 20px;
+    bottom: 90px;
+  }
+}
+
+@media (max-width: 768px) {
+  .mascot.left{
+    display: none;
+  }
+
+  .mascot.right{
+  bottom: 60px;
+  }
+
+  .support-women__content p {
+    font-size: 1.1rem;
+  }
+
+  .cta-button {
+    font-size: 0.95rem;
+    padding: 0.7rem 1.5rem;
+  }
+}
+
+@media (max-width: 630px) {
+  .mascot.right{
+    display: none;
+    }
+   .support-women{
+margin: 50px 20px !important;
+    }
+}
+
+
+@media (max-width:800px){
+  .newtitle{
+    font-size: 35px !important;
+  }
 }
