--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20262,17 +20262,20 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
   font-size: 36px;
   line-height: 1.1666em;
   color: #000; 
+  letter-spacing: 3px;
 }
 
 .box2-home .service-heading {
   font-size: 36px;
   line-height: 1.1666em;
   color: #000; 
+  letter-spacing: 3px;
 }
 .box3-home .service-heading {
-  font-size: 36px;
+  font-size: 32px;
   line-height: 1.1666em;
   color: #000; 
+  letter-spacing: 3px;
 }
 
 .box1-home{
@@ -20316,6 +20319,75 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 .fw-500{font-weight: 500; }
 .box1-home h2, .box2-home h2, .box3-home h2{font-size:35px}
 
+.ispecialize .img-div{
+  margin-bottom: -40px;
+}
+
+@media screen and (max-width: 1024px) {
+  .box1-home .service-heading,
+  .box2-home .service-heading,
+  .box3-home .service-heading {
+    font-size: 28px;
+    text-align: left;
+  }
+  .box1-home .title,
+  .box2-home .title,
+  .box3-home .title {
+    font-size: 16px;
+    margin: 40px 0 20px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .box1-home, .box2-home, .box3-home {
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+  .box1-home .service-heading,
+  .box2-home .service-heading,
+  .box3-home .service-heading {
+    font-size: 28px;
+    text-align: left;
+  }
+
+  .box1-home .title,
+  .box2-home .title,
+  .box3-home .title {
+    font-size: 16px;
+    margin: 40px 0 20px;
+  }
+
+  .box1-home .num,
+  .box2-home .num,
+  .box3-home .num {
+    font-size: 20px;
+  }
+
+  .box1-home img,
+  .box2-home img,
+  .box3-home img {
+    width: 120px;
+  }
+  .ispecialize .img-div{
+    margin-bottom: 0px !important;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .box1-home .service-heading,
+  .box2-home .service-heading,
+  .box3-home .service-heading {
+    font-size: 22px;
+  }
+
+  .box1-home img,
+  .box2-home img,
+  .box3-home img {
+    width: 100px;
+  }
+}
+
+
 /* .marquee-container {
   width: 100%;
   overflow: hidden;
@@ -20345,14 +20417,17 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
     transform: translateX(-50%);
   }
 } */
+
+
 .ourusp.call-action{
   padding: 20px 0 !important;
+  background-color: #a1afd9 !important;
 }
 .ourusp marquee span {
   font-size: 40px !important;
-  font-weight: 300 !important;
+  font-weight: 500 !important;
   letter-spacing:5px;
- 
+  color: #000;
 }
 
 .iteach .owl-nav {
@@ -20421,6 +20496,17 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
   flex-grow: 1;
 }
 
+@media (max-width:990px){
+  .iteach-img{
+    
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .iteach-img img{
+    width: 50%;
+  }
+}
 
 .special-programs {
   /* background-color: #f1f5ff; */
@@ -20521,7 +20607,7 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 .support-women {
   position: relative;
   background-color: #e2110026;
-  padding: 100px 1rem;
+  padding: 50px 1rem;
   text-align: center;
   border-radius: 2rem;
   display: flex;
@@ -20577,7 +20663,7 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 .mascot.right {
   right: 100px;
   width: 200px;
-  bottom: 130px;
+  bottom: 50px;
   transform: translateY(20%);
 }
 
@@ -20598,6 +20684,7 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
 }
 
 
+
 @media (max-width: 1024px) {
   .mascot.left {
     width: 180px;
@@ -20606,9 +20693,30 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
   }
 
   .mascot.right {
-    width: 160px;
+    width: 130px;
     right: 20px;
-    bottom: 90px;
+    bottom: 60px;
+  }
+  .support-women__content p{
+    width: 70%;
+    margin: auto;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 920px) {
+  .mascot.left {
+    width: 150px;
+    left: 20px;
+    top: 100px;
+  }
+  .support-women__content p{
+    width: 50% !important;
+    
+  }
+  .mascot.right {
+    width: 130px;
+    right: 20px;
+    bottom: 80px;
   }
 }
 
@@ -20618,11 +20726,14 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
   }
 
   .mascot.right{
-  bottom: 60px;
+    width: 120px;
+  bottom: 50px;
   }
 
   .support-women__content p {
     font-size: 1.1rem;
+    margin-bottom: 2rem;
+    width: 70% !important;
   }
 
   .cta-button {
@@ -20637,6 +20748,11 @@ ul.wespealize li{ font-size:30px !important; list-style-type: none;}
     }
    .support-women{
 margin: 50px 20px !important;
+    }
+
+    .support-women__content p{
+      width: 100% !important;
+      
     }
 }
 
