--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -69,6 +69,17 @@
 
 
 @media only screen and (max-width: 768px){
+  .newHero .home-banner-subtitle {
+    -webkit-text-stroke: 0px #fff;
+    color: #fff !important;
+    font-weight: 500;
+    font-size: 25px;
+    position: relative;
+    top: -15px;
+    text-transform: uppercase;
+    font-size: 18px !important;
+
+  }
   .hero-content  {
     margin-top: 0px;
   }
@@ -94,7 +105,7 @@
     color: #000 !important;
     border-color: #fff !important;
   }
- 
+  
 }
 
 @media (max-width:768px){
